# aoc-2024

./: Cargo.toml
.github/workflows/: codspeed.yml
benches/: day1.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
src/: day1.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  dayN.rs.tmpl  lib.rs
