[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"
default-run = "aoc-2024"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
atoi_simd = "0.16"
memchr = "2"

[features]
debug = []

[[bench]]
name = "day7"
harness = false

[[bench]]
name = "day6"
harness = false

[[bin]]
name = "rank3"
test = false
bench = false

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2" }
indoc = "2"